teleport-agent-core-spring/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-gateway
  namespace: default
  labels:
    app: spring-gateway
    version: v1
spec:
  # This can't be larger than 1,  the RSA key isn't shared between instances
  replicas: 1
  selector:
    matchLabels:
      app: spring-gateway
  template:
    metadata:
      labels:
        app: spring-gateway
        version: v1
    spec:
      containers:
      - name: spring-gateway
        image: ellinj/spring-agent-gateway:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1000m"

        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3

      restartPolicy: Always
